--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -3,7 +3,7 @@
 
 {% block static %}
 {% load static %}
-<link rel="stylesheet" href="{% static '/pages/myfollow.css' %}">
+<link rel="stylesheet" href="{% static '/pages/myFollow.css' %}">
 {% endblock %}
 
 {% block nav %}
