--- a/templates/createChangeRecipe.html
+++ b/templates/createChangeRecipe.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Редактирование рецепта{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block static %}
 {% load static %}
@@ -7,7 +7,11 @@
 {% endblock %}
 
 {% block nav %}
+{% if 'create' in request.path %}
+{% include "includes/nav.html" with create_recipe=True %}
+{% else %}
 {% include "includes/nav.html" %}
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -15,7 +19,7 @@
 
 <main class="main container">
     <div class="main__header">
-        <h1 class="main__title">Редактирование рецепта</h1>
+        <h1 class="main__title">{{ title }}</h1>
     </div>
     <div class="form-container">
         <div class="form-container">
@@ -23,7 +27,8 @@
                 {% csrf_token %}
 
                 <div class="form__group">
-                    <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
+                    <p>
+                        <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
                     <div class="form__field-group">
                         <input type="text" id="id_name" name="title" class="form__input" value="{{ recipe.title }}">
                         <span class="form__error">{{ form.title.errors|striptags }}</span>
@@ -36,14 +41,8 @@
                         <div class="tags">
 
                             {% for tag in form.tags.field.choices.queryset.all %}
-                            <div class="tags__item">
-                                <input type="checkbox" name="{{ tag.slug }}" id="id_{{ tag.slug }}"
-                                {% if tag in form.instance.tag.all %}checked{% endif %}
-                                    class="tags__checkbox tags__checkbox_style_{{ tag.color }}">
-                                <label for="id_{{ tag.slug }}" class="tags__label">{{ tag.title }}</label>
-                            </div>
+                            {% include 'includes/tags.html' %}
                             {% endfor %}
-
 
                         </div>
                         <span class="form__error">
@@ -59,7 +58,8 @@
                 </div>
 
                 <div class="form__group">
-                    <label for="nameIngredient" class="form__label">Ингредиенты</label>
+                    <p>
+                        <label for="nameIngredient" class="form__label">Ингредиенты</label>
                     <div class="form__field-group">
                         <div class="form__field-group-ingredientes">
                             <div class="form__dropdown">
@@ -81,7 +81,7 @@
                     <div class="form__field-group form__field-group_time">
                         <input type="text" id="id_time" name="cooking_time" class="form__input"
                             value="{{ recipe.cooking_time }}">
-                        <label for="id_time" class="form__label">минут</label>
+                        <label for=" id_time" class="form__label">минут</label>
                         <span class="form__error">{{ form.cooking_time.errors|striptags }}</span>
                     </div>
                 </div>
@@ -108,10 +108,12 @@
 
 
                 <div class="form__footer">
-                    <button class="button button_style_blue" type="submit">Сохранить</button>
+                    <button class="button button_style_blue" type="submit">{{ bottom }}</button>
+                    {% if 'change' in request.path %}
                     <a style="margin-left: 2.5em" href="{% url 'delete_recipe' recipe.id %}"
                         class="form__ingredient-link">Удалить
                     </a>
+                    {% endif %}
                 </div>
 
             </form>
