--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -4,21 +4,21 @@
         <div class="nav__container container">
             <ul class="nav__items list">
                 <li class="nav__item nav__item_{% if index %}active{% endif %}">
-                    <a href="/" class="nav__link link">Рецепты</a>
+                    <a href="{% url 'index' %}" class="nav__link link">Рецепты</a>
                 </li>
                 <li class="nav__item nav__item_{% if my_follow %}active{% endif %}">
-                    <a href="/follows/" class="nav__link link">Мои подписки</a>
+                    <a href="{% url 'follows' %}" class="nav__link link">Мои подписки</a>
                 </li>
                 <li class="nav__item nav__item_{% if create_recipe %}active{% endif %}">
-                    <a href="/create_recipe/" class="nav__link link">Создать рецепт</a>
+                    <a href="{% url 'create_recipe' %}" class="nav__link link">Создать рецепт</a>
                 </li>
                 <li class="nav__item nav__item_{% if favorite %}active{% endif %}">
-                    <a href="/favorites/" class="nav__link link">Избранное</a>
+                    <a href="{% url 'favorites' %}" class="nav__link link">Избранное</a>
                 </li>
                 <li class="nav__item nav__item_{% if shoplist %}active{% endif %}">
-                    <a href="/shoplist/" class="nav__link link">Список покупок</a>
-                    <span class="badge badge_style_blue nav__badge" id="counter">{{ count }}
-                    </span>
+                    <a href="{% url 'shoplist' %}" class="nav__link link">Список покупок</a>
+                    <span class="badge badge_style_blue nav__badge" id="counter">{% if count > 0 %}
+                        {{ count }}{% endif %}</span>
                 </li>
             </ul>
             <ul class="nav__items list">
@@ -36,10 +36,10 @@
         <div class="nav__container container">
             <ul class="nav__items list">
                 <li class="nav__item nav__item_{% if index %}active{% else %}disabled{% endif %}">
-                    <a href="/" class="nav__link link">Рецепты</a>
+                    <a href="{% url 'index' %}" class="nav__link link">Рецепты</a>
                 </li>
                 <li class="nav__item nav__item_disabled">
-                    <a href="/auth/login/" class="nav__link link">Список покупок</a>
+                    <a href="{% url 'login' %}" class="nav__link link">Список покупок</a>
                 </li>
             </ul>
             <ul class="nav__items list">
