--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -55,7 +55,7 @@
     <h1 class="main__title" style="text-align: center;">Пока тут пусто!</h1>
     {% endif %}
     {% if page.has_other_pages %}
-    {% include "paginator.html" with items=page paginator=paginator%}
+    {% include "includes/paginator.html" with items=page paginator=paginator%}
     {% endif %}
 </main>
 
