--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,7 +44,7 @@
         {% endfor %}
     </div>
     {% if page.has_other_pages %}
-    {% include "paginator.html" with items=page paginator=paginator%}
+    {% include "includes/paginator.html" with items=page paginator=paginator%}
     {% endif %}
 </main>
 
